--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "better-react-spinkit": "^2.0.4",
+    "email-validator": "^2.0.4",
+    "firebase": "^9.7.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
