--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
     "firebase": "^9.7.0",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.0.3",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "eslint": "8.14.0",
